# devtree

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: config.md  secrets.md
docs/adapters/: portless.md
examples/monorepo-pnpm/: .devtree.yml
examples/next-pnpm/: .devtree.yml
examples/raw-port/: .devtree.yml
src/: main.rs
